syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.tanle.tland.user_serivce.grpc";
option java_outer_classname = "PostToSearchProto";

import "asset_post.proto";

service PostToSearchService {
  rpc getAllPost(Empty) returns(PostDetailResponseList);
  rpc getPostById(PostDetailRequest) returns(PostDetailResponse);
}

message Empty {

}
message PostDetailRequest {
  string id = 1;
}
message PostDetailResponseList {
  repeated PostDetailResponse response = 1;
}
message PostDetailResponse {
  string id = 1;
  string title = 2;
  string description = 3;;
  double price = 4;
  string type = 5;
  string lastUpdated = 6;
  string createdAt = 7;
  string status = 8;
  AssetResponse assetDetail = 9;
  UserInfoResponse userInfo = 10;
}

message UserInfoResponse {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string avt = 4;
}